src-03-core-crm/main/default/objects/Account/fields/Account_Logo__c.field-meta.xml
<CustomField>
    <fullName>Account_Logo__c</fullName>
    <formula>IMAGE(WAW_Image_Address__c, &apos;Image Path Invalid&apos;, 40, 110)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Logo</label>
    <type>Text</type>
</CustomField>