src-03-core-crm/main/default/objects/Account/fields/Active_Venue__c.field-meta.xml
<CustomField>
    <fullName>Active_Venue__c</fullName>
    <label>Active Venue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>