src-03-core-crm/main/default/objects/Account/fields/AverageSessionsperCase__c.field-meta.xml
<CustomField>
    <fullName>AverageSessionsperCase__c</fullName>
    <label>Average Sessions per Case</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>