src-03-core-crm/main/default/objects/Account/fields/AverageSessionsperCaseStep2__c.field-meta.xml
<CustomField>
    <fullName>AverageSessionsperCaseStep2__c</fullName>
    <label>Average Sessions Per Case Step 2</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>