src-03-core-crm/main/default/objects/Account/fields/AverageSessionsPerCaseStep3__c.field-meta.xml
<CustomField>
    <fullName>AverageSessionsPerCaseStep3__c</fullName>
    <label>Average Sessions Per Case Step 3</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>