src-03-core-crm/main/default/objects/Account/fields/Core10__c.field-meta.xml
<CustomField>
    <fullName>Core10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Core10</label>
    <type>Checkbox</type>
</CustomField>