src-03-core-crm/main/default/objects/Account/fields/EAP_ID__c.field-meta.xml
<CustomField>
    <fullName>EAP_ID__c</fullName>
    <label>EAP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>