src-03-core-crm/main/default/objects/Account/fields/GAD_7__c.field-meta.xml
<CustomField>
    <fullName>GAD_7__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GAD-7</label>
    <type>Checkbox</type>
</CustomField>