src-03-core-crm/main/default/objects/Account/fields/NHS_Practice_Code__c.field-meta.xml
<CustomField>
    <fullName>NHS_Practice_Code__c</fullName>
    <description>Required for Surgery record type</description>
    <label>NHS Practice Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>