src-03-core-crm/main/default/objects/Account/fields/Opening_Times__c.field-meta.xml
<CustomField>
    <fullName>Opening_Times__c</fullName>
    <label>Opening Times</label>
    <length>255</length>
    <type>Text</type>
</CustomField>