src-03-core-crm/main/default/objects/Account/fields/PHQ_9__c.field-meta.xml
<CustomField>
    <fullName>PHQ_9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PHQ-9</label>
    <type>Checkbox</type>
</CustomField>