src-03-core-crm/main/default/objects/Account/fields/PriorID__c.field-meta.xml
<CustomField>
    <fullName>PriorID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Prior ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>