src-03-core-crm/main/default/objects/Account/fields/Risk_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Recommendation__c</fullName>
    <label>Risk Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>