src-03-core-crm/main/default/objects/Account/fields/Total_Number_of_Step_2_Attended__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Step_2_Attended__c</fullName>
    <label>Total Number of Step 2 Attended</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>