src-03-core-crm/main/default/objects/Account/fields/Venue_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Venue_Duplicate__c</fullName>
    <label>Venue Duplicate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>