src-03-core-crm/main/default/objects/Account/fields/Venue_ID__c.field-meta.xml
<CustomField>
    <fullName>Venue_ID__c</fullName>
    <label>Venue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>