src-03-core-crm/main/default/objects/Account/fields/WAW_Additional_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>WAW_Additional_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Additional Contact 2)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>