src-03-core-crm/main/default/objects/Account/fields/WAW_Agreed_Maximum_Annual_Uptake__c.field-meta.xml
<CustomField>
    <fullName>WAW_Agreed_Maximum_Annual_Uptake__c</fullName>
    <label>Agreed Maximum Annual Uptake</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>