src-03-core-crm/main/default/objects/Account/fields/WAW_Authorisation_Contact__c.field-meta.xml
<CustomField>
    <fullName>WAW_Authorisation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorisation Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Authorisation Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>