src-03-core-crm/main/default/objects/Account/fields/WAW_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>WAW_Billing_Email__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>