src-03-core-crm/main/default/objects/Account/fields/WAW_Capitated_Fee__c.field-meta.xml
<CustomField>
    <fullName>WAW_Capitated_Fee__c</fullName>
    <label>Capitated Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>