src-03-core-crm/main/default/objects/Account/fields/WAW_Collect_Employee_Information__c.field-meta.xml
<CustomField>
    <fullName>WAW_Collect_Employee_Information__c</fullName>
    <inlineHelpText>Select &apos;Yes&apos; if the contract requires demographics of their employee to be collected when a family member uses the service</inlineHelpText>
    <label>Collect Employee Information?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WAW_Immediate_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>