src-03-core-crm/main/default/objects/Account/fields/WAW_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>WAW_Contract_End_Date__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>