src-03-core-crm/main/default/objects/Account/fields/WAW_Contract_Review_Meeting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>WAW_Contract_Review_Meeting_Frequency__c</fullName>
    <label>Contract Review Meeting Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>6 Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>When Requested</fullName>
            </value>
            <value>
                <fullName>No Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>