src-03-core-crm/main/default/objects/Account/fields/WAW_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>WAW_Contract_Start_Date__c</fullName>
    <description>The date the contract with WAW started</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>