src-03-core-crm/main/default/objects/Account/fields/WAW_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>WAW_Contract_Status__c</fullName>
    <formula>IF(
AND(WAW_Contract_Start_Date__c &lt;= TODAY(),
OR(ISBLANK(WAW_Contract_End_Date__c),WAW_Contract_End_Date__c &gt; TODAY()
)
),&quot;Active&quot;,&quot;InActive&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>