src-03-core-crm/main/default/objects/Account/fields/WAW_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>WAW_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capitated</fullName>
            </value>
            <value>
                <fullName>Fee For Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>