src-03-core-crm/main/default/objects/Account/fields/WAW_Debt_Advice__c.field-meta.xml
<CustomField>
    <fullName>WAW_Debt_Advice__c</fullName>
    <label>Debt Advice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>