src-03-core-crm/main/default/objects/Account/fields/WAW_DepartmentDivison__c.field-meta.xml
<CustomField>
    <fullName>WAW_DepartmentDivison__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Department/Divison</label>
    <type>Checkbox</type>
</CustomField>