src-03-core-crm/main/default/objects/Account/fields/WAW_External_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>WAW_External_Reference_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Reference ID</label>
    <type>Checkbox</type>
</CustomField>