src-03-core-crm/main/default/objects/Account/fields/WAW_F2F_Number_of_Sessions_Per_Employee__c.field-meta.xml
<CustomField>
    <fullName>WAW_F2F_Number_of_Sessions_Per_Employee__c</fullName>
    <label>Number of Sessions Per Employee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>