src-03-core-crm/main/default/objects/Account/fields/WAW_Face_to_Face_Sessions__c.field-meta.xml
<CustomField>
    <fullName>WAW_Face_to_Face_Sessions__c</fullName>
    <label>Face to Face Sessions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>