src-03-core-crm/main/default/objects/Account/fields/WAW_Guided_Self_Help_Sessions__c.field-meta.xml
<CustomField>
    <fullName>WAW_Guided_Self_Help_Sessions__c</fullName>
    <label>Guided Self Help Sessions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>