src-03-core-crm/main/default/objects/Account/fields/WAW_Helpline_Number__c.field-meta.xml
<CustomField>
    <fullName>WAW_Helpline_Number__c</fullName>
    <label>Helpline Number</label>
    <type>Phone</type>
</CustomField>