src-03-core-crm/main/default/objects/Account/fields/WAW_L_F_Additional_Session_Fee__c.field-meta.xml
<CustomField>
    <fullName>WAW_L_F_Additional_Session_Fee__c</fullName>
    <label>Additional Session Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>