src-03-core-crm/main/default/objects/Account/fields/WAW_Leaflets__c.field-meta.xml
<CustomField>
    <fullName>WAW_Leaflets__c</fullName>
    <label>Leaflets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>