src-03-core-crm/main/default/objects/Account/fields/WAW_Length_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>WAW_Length_of_Employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Length of Employment</label>
    <type>Checkbox</type>
</CustomField>