src-03-core-crm/main/default/objects/Account/fields/WAW_MA_Available_Fee_for_Service__c.field-meta.xml
<CustomField>
    <fullName>WAW_MA_Available_Fee_for_Service__c</fullName>
    <label>Available Fee for Service?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>