src-03-core-crm/main/default/objects/Account/fields/WAW_Main_Contract_Contact__c.field-meta.xml
<CustomField>
    <fullName>WAW_Main_Contract_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contract Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must enter a Service Contact</errorMessage>
        <filterItems>
            <field>Contact.Surgery_Account__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Contact.Practitioner_Status__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>