src-03-core-crm/main/default/objects/Account/fields/WAW_Management_Advisory__c.field-meta.xml
<CustomField>
    <fullName>WAW_Management_Advisory__c</fullName>
    <label>Management Advisory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>