src-03-core-crm/main/default/objects/Account/fields/WAW_Management_Advisory_Ind__c.field-meta.xml
<CustomField>
    <fullName>WAW_Management_Advisory_Ind__c</fullName>
    <formula>IF(TEXT(WAW_Management_Advisory_Service__c) = &apos;Yes&apos;,
IMAGE(&apos;/resource/1576755487000/GraphicsPackNew/fatcow/farmfresh/32/accept.png&apos;, &apos;Accepted&apos;),
IMAGE(&apos;/resource/1576755487000/GraphicsPackNew/fatcow/farmfresh/32/delete.png&apos;, &apos;ERROR&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management Advisory</label>
    <type>Text</type>
</CustomField>