src-03-core-crm/main/default/objects/Account/fields/WAW_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>WAW_Marital_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marital Status</label>
    <type>Checkbox</type>
</CustomField>