src-03-core-crm/main/default/objects/Account/fields/WAW_Next_Contract_Review_Meeting__c.field-meta.xml
<CustomField>
    <fullName>WAW_Next_Contract_Review_Meeting__c</fullName>
    <label>Next Contract Review Meeting</label>
    <type>Date</type>
</CustomField>