src-03-core-crm/main/default/objects/Account/fields/WAW_Notes__c.field-meta.xml
<CustomField>
    <fullName>WAW_Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>