src-03-core-crm/main/default/objects/Account/fields/WAW_Occupation_Type__c.field-meta.xml
<CustomField>
    <fullName>WAW_Occupation_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Occupation Type</label>
    <type>Checkbox</type>
</CustomField>