src-03-core-crm/main/default/objects/Account/fields/WAW_Onl_Included_in_Capitated_Fee__c.field-meta.xml
<CustomField>
    <fullName>WAW_Onl_Included_in_Capitated_Fee__c</fullName>
    <label>Included in Capitated Fee?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>