src-03-core-crm/main/default/objects/Account/fields/WAW_Online_Counselling__c.field-meta.xml
<CustomField>
    <fullName>WAW_Online_Counselling__c</fullName>
    <label>Online Counselling?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>