src-03-core-crm/main/default/objects/Account/fields/WAW_Other_Eligability_Notes__c.field-meta.xml
<CustomField>
    <fullName>WAW_Other_Eligability_Notes__c</fullName>
    <label>Other Eligability Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>