src-03-core-crm/main/default/objects/Account/fields/WAW_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>WAW_Portal_Access__c</fullName>
    <label>Portal Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provided</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>