src-03-core-crm/main/default/objects/Account/fields/WAW_Portal_Authorisation__c.field-meta.xml
<CustomField>
    <fullName>WAW_Portal_Authorisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Authorisation?</label>
    <type>Checkbox</type>
</CustomField>