src-03-core-crm/main/default/objects/Account/fields/WAW_Portal_Web_Address__c.field-meta.xml
<CustomField>
    <fullName>WAW_Portal_Web_Address__c</fullName>
    <label>Portal Web Address</label>
    <type>Url</type>
</CustomField>