src-03-core-crm/main/default/objects/Account/fields/WAW_Posters__c.field-meta.xml
<CustomField>
    <fullName>WAW_Posters__c</fullName>
    <label>Posters</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>