src-03-core-crm/main/default/objects/Account/fields/WAW_Quarterly_Billing_Month_3__c.field-meta.xml
<CustomField>
    <fullName>WAW_Quarterly_Billing_Month_3__c</fullName>
    <label>Quarterly Billing Month 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WAW_Billing_Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>