src-03-core-crm/main/default/objects/Account/fields/WAW_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>WAW_Referral_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Source</label>
    <type>Checkbox</type>
</CustomField>