src-03-core-crm/main/default/objects/Account/fields/WAW_RegionLocation__c.field-meta.xml
<CustomField>
    <fullName>WAW_RegionLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Region/Location</label>
    <type>Checkbox</type>
</CustomField>