src-03-core-crm/main/default/objects/Account/fields/WAW_Sage_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>WAW_Sage_Account_Number__c</fullName>
    <label>Sage Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>