src-03-core-crm/main/default/objects/Account/fields/WAW_Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>WAW_Salary_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salary Range</label>
    <type>Checkbox</type>
</CustomField>